--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-server": "webpack --config ./config/webpack.server.config.js",
     "build": "npm run build-client && npm run build-server",
     "build-client-prod": "webpack --config ./config/webpack.client.config.js --mode=production",
-	"build-server-prod": "webpack --config ./config/webpack.server.config.js --mode=production",
+    "build-server-prod": "webpack --config ./config/webpack.server.config.js --mode=production",
     "build-prod": "npm run build-client-prod && npm run build-server-prod",
     "start": "nodemon build/server/index.js --config nodemon.json"
   },
@@ -29,6 +29,7 @@
     "axios": "^0.19.0",
     "axios-hooks": "^1.2.1",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "moment": "^2.24.0",
     "path": "^0.12.7",
     "react": "^16.8.6",
