--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.23",
     "@the-orange-alliance/lib-ems": "^0.8.7",
+    "@types/express-http-proxy": "^1.5.12",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "axios": "^0.19.0",
