--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.19.0",
     "axios-hooks": "^1.2.1",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "https": "^1.0.0",
     "moment": "^2.24.0",
     "path": "^0.12.7",
