--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.23",
     "@the-orange-alliance/lib-ems": "^0.9.1-d",
-    "@types/express-http-proxy": "^1.5.12",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.8.5",
     "axios": "^0.21.2",
     "axios-hooks": "^1.2.1",
     "express": "^4.17.1",
@@ -44,6 +41,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
+    "@types/express-http-proxy": "^1.5.12",
+    "@types/node": "^15.6.1",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
     "@types/request": "^2.48.2",
